--- a/src/app/components/checklist-editor/checklist-editor.html
+++ b/src/app/components/checklist-editor/checklist-editor.html
@@ -53,20 +53,6 @@
       <h3>Basic Information</h3>
       <div class="form-grid">
         <div class="form-group">
-          <label for="id">ID *</label>
-          <input
-            id="id"
-            type="text"
-            formControlName="id"
-            class="form-control"
-            [class.error]="isFieldInvalid('id')"
-          />
-          @if (isFieldInvalid("id")) {
-          <div class="field-error">ID is required</div>
-          }
-        </div>
-
-        <div class="form-group">
           <label for="healthProgram">Health Program *</label>
           <select
             id="healthProgram"
@@ -148,17 +134,6 @@
 
           <div class="form-grid">
             <div class="form-group">
-              <label [for]="'section-id-' + sectionIndex">Section ID *</label>
-              <input
-                [id]="'section-id-' + sectionIndex"
-                type="text"
-                formControlName="id"
-                class="form-control"
-                [class.error]="isSectionFieldInvalid(sectionIndex, 'id')"
-              />
-            </div>
-
-            <div class="form-group">
               <label [for]="'section-title-' + sectionIndex">Title *</label>
               <input
                 [id]="'section-title-' + sectionIndex"
@@ -187,17 +162,15 @@
 
             <div class="form-group">
               <label [for]="'section-maxScore-' + sectionIndex"
-                >Max Score *</label
+                >Max Score (Auto-calculated)</label
               >
               <input
                 [id]="'section-maxScore-' + sectionIndex"
                 type="number"
                 formControlName="maxScore"
                 class="form-control"
-                min="1"
-                [class.error]="
-                    isSectionFieldInvalid(sectionIndex, 'maxScore')
-                  "
+                readonly
+                [class.readonly]="true"
               />
             </div>
           </div>
@@ -254,14 +227,6 @@
                 <div class="standard-question-fields">
                   <div class="form-grid">
                     <div class="form-group">
-                      <label>Question ID *</label>
-                      <input
-                        type="text"
-                        formControlName="id"
-                        class="form-control"
-                      />
-                    </div>
-                    <div class="form-group">
                       <label>Title *</label>
                       <input
                         type="text"
@@ -279,12 +244,12 @@
                       />
                     </div>
                     <div class="form-group">
-                      <label>Max Score *</label>
+                      <label>Max Score (Auto-calculated)</label>
                       <input
                         type="number"
                         formControlName="maxScore"
                         class="form-control"
-                        min="1"
+                        readonly
                       />
                     </div>
                   </div>
@@ -297,14 +262,6 @@
                 <div class="data-control-fields">
                   <div class="form-grid">
                     <div class="form-group">
-                      <label>Question ID *</label>
-                      <input
-                        type="text"
-                        formControlName="id"
-                        class="form-control"
-                      />
-                    </div>
-                    <div class="form-group">
                       <label>Title *</label>
                       <input
                         type="text"
@@ -322,12 +279,12 @@
                       />
                     </div>
                     <div class="form-group">
-                      <label>Max Score *</label>
+                      <label>Max Score (Auto-calculated)</label>
                       <input
                         type="number"
                         formControlName="maxScore"
                         class="form-control"
-                        min="1"
+                        readonly
                       />
                     </div>
                     <div class="form-group">
@@ -353,14 +310,6 @@
                     <h6>Data Source</h6>
                     <div class="form-grid">
                       <div class="form-group">
-                        <label>ID *</label>
-                        <input
-                          type="text"
-                          formControlName="id"
-                          class="form-control"
-                        />
-                      </div>
-                      <div class="form-group">
                         <label>Name *</label>
                         <input
                           type="text"
@@ -383,14 +332,6 @@
                   <div formGroupName="dataCount" class="data-point-group">
                     <h6>Data Count</h6>
                     <div class="form-grid">
-                      <div class="form-group">
-                        <label>ID *</label>
-                        <input
-                          type="text"
-                          formControlName="id"
-                          class="form-control"
-                        />
-                      </div>
                       <div class="form-group">
                         <label>Name *</label>
                         <input
